mux-compiler/tests/snapshots/parser_integration__legacy_ast_recursivemod.snap
---
source: mux-compiler/tests/parser_integration.rs
---
[
    Function(
        FunctionNode {
            name: "fibonacci",
            type_params: [],
            params: [
                Param {
                    name: "n",
                    type_: TypeNode {
                        kind: Primitive(
                            Int,
                        ),
                        span: Span,
                    },
                    default_value: None,
                },
            ],
            return_type: TypeNode {
                kind: Primitive(
                    Int,
                ),
                span: Span,
            },
            body: [
                StatementNode {
                    kind: If {
                        cond: ExpressionNode {
                            kind: Binary {
                                left: ExpressionNode {
                                    kind: Identifier(
                                        "n",
                                    ),
                                    span: Span,
                                },
                                op: LessEqual,
                                op_span: Span,
                                right: ExpressionNode {
                                    kind: Literal(
                                        Integer(
                                            1,
                                        ),
                                    ),
                                    span: Span,
                                },
                            },
                            span: Span,
                        },
                        then_block: [
                            StatementNode {
                                kind: Return(
                                    Some(
                                        ExpressionNode {
                                            kind: Identifier(
                                                "n",
                                            ),
                                            span: Span,
                                        },
                                    ),
                                ),
                                span: Span,
                            },
                        ],
                        else_block: None,
                    },
                    span: Span,
                },
                StatementNode {
                    kind: Return(
                        Some(
                            ExpressionNode {
                                kind: Binary {
                                    left: ExpressionNode {
                                        kind: Call {
                                            func: ExpressionNode {
                                                kind: Identifier(
                                                    "fibonacci",
                                                ),
                                                span: Span,
                                            },
                                            args: [
                                                ExpressionNode {
                                                    kind: Binary {
                                                        left: ExpressionNode {
                                                            kind: Identifier(
                                                                "n",
                                                            ),
                                                            span: Span,
                                                        },
                                                        op: Subtract,
                                                        op_span: Span,
                                                        right: ExpressionNode {
                                                            kind: Literal(
                                                                Integer(
                                                                    1,
                                                                ),
                                                            ),
                                                            span: Span,
                                                        },
                                                    },
                                                    span: Span,
                                                },
                                            ],
                                        },
                                        span: Span,
                                    },
                                    op: Add,
                                    op_span: Span,
                                    right: ExpressionNode {
                                        kind: Call {
                                            func: ExpressionNode {
                                                kind: Identifier(
                                                    "fibonacci",
                                                ),
                                                span: Span,
                                            },
                                            args: [
                                                ExpressionNode {
                                                    kind: Binary {
                                                        left: ExpressionNode {
                                                            kind: Identifier(
                                                                "n",
                                                            ),
                                                            span: Span,
                                                        },
                                                        op: Subtract,
                                                        op_span: Span,
                                                        right: ExpressionNode {
                                                            kind: Literal(
                                                                Integer(
                                                                    2,
                                                                ),
                                                            ),
                                                            span: Span,
                                                        },
                                                    },
                                                    span: Span,
                                                },
                                            ],
                                        },
                                        span: Span,
                                    },
                                },
                                span: Span,
                            },
                        ),
                    ),
                    span: Span,
                },
            ],
            span: Span,
            is_common: false,
            where_clause: None,
        },
    ),
    Function(
        FunctionNode {
            name: "is_even",
            type_params: [],
            params: [
                Param {
                    name: "n",
                    type_: TypeNode {
                        kind: Primitive(
                            Int,
                        ),
                        span: Span,
                    },
                    default_value: None,
                },
            ],
            return_type: TypeNode {
                kind: Primitive(
                    Bool,
                ),
                span: Span,
            },
            body: [
                StatementNode {
                    kind: If {
                        cond: ExpressionNode {
                            kind: Binary {
                                left: ExpressionNode {
                                    kind: Identifier(
                                        "n",
                                    ),
                                    span: Span,
                                },
                                op: Equal,
                                op_span: Span,
                                right: ExpressionNode {
                                    kind: Literal(
                                        Integer(
                                            0,
                                        ),
                                    ),
                                    span: Span,
                                },
                            },
                            span: Span,
                        },
                        then_block: [
                            StatementNode {
                                kind: Return(
                                    Some(
                                        ExpressionNode {
                                            kind: Literal(
                                                Boolean(
                                                    true,
                                                ),
                                            ),
                                            span: Span,
                                        },
                                    ),
                                ),
                                span: Span,
                            },
                        ],
                        else_block: None,
                    },
                    span: Span,
                },
                StatementNode {
                    kind: Return(
                        Some(
                            ExpressionNode {
                                kind: Call {
                                    func: ExpressionNode {
                                        kind: Identifier(
                                            "is_odd",
                                        ),
                                        span: Span,
                                    },
                                    args: [
                                        ExpressionNode {
                                            kind: Binary {
                                                left: ExpressionNode {
                                                    kind: Identifier(
                                                        "n",
                                                    ),
                                                    span: Span,
                                                },
                                                op: Subtract,
                                                op_span: Span,
                                                right: ExpressionNode {
                                                    kind: Literal(
                                                        Integer(
                                                            1,
                                                        ),
                                                    ),
                                                    span: Span,
                                                },
                                            },
                                            span: Span,
                                        },
                                    ],
                                },
                                span: Span,
                            },
                        ),
                    ),
                    span: Span,
                },
            ],
            span: Span,
            is_common: false,
            where_clause: None,
        },
    ),
    Function(
        FunctionNode {
            name: "is_odd",
            type_params: [],
            params: [
                Param {
                    name: "n",
                    type_: TypeNode {
                        kind: Primitive(
                            Int,
                        ),
                        span: Span,
                    },
                    default_value: None,
                },
            ],
            return_type: TypeNode {
                kind: Primitive(
                    Bool,
                ),
                span: Span,
            },
            body: [
                StatementNode {
                    kind: If {
                        cond: ExpressionNode {
                            kind: Binary {
                                left: ExpressionNode {
                                    kind: Identifier(
                                        "n",
                                    ),
                                    span: Span,
                                },
                                op: Equal,
                                op_span: Span,
                                right: ExpressionNode {
                                    kind: Literal(
                                        Integer(
                                            0,
                                        ),
                                    ),
                                    span: Span,
                                },
                            },
                            span: Span,
                        },
                        then_block: [
                            StatementNode {
                                kind: Return(
                                    Some(
                                        ExpressionNode {
                                            kind: Literal(
                                                Boolean(
                                                    false,
                                                ),
                                            ),
                                            span: Span,
                                        },
                                    ),
                                ),
                                span: Span,
                            },
                        ],
                        else_block: None,
                    },
                    span: Span,
                },
                StatementNode {
                    kind: Return(
                        Some(
                            ExpressionNode {
                                kind: Call {
                                    func: ExpressionNode {
                                        kind: Identifier(
                                            "is_even",
                                        ),
                                        span: Span,
                                    },
                                    args: [
                                        ExpressionNode {
                                            kind: Binary {
                                                left: ExpressionNode {
                                                    kind: Identifier(
                                                        "n",
                                                    ),
                                                    span: Span,
                                                },
                                                op: Subtract,
                                                op_span: Span,
                                                right: ExpressionNode {
                                                    kind: Literal(
                                                        Integer(
                                                            1,
                                                        ),
                                                    ),
                                                    span: Span,
                                                },
                                            },
                                            span: Span,
                                        },
                                    ],
                                },
                                span: Span,
                            },
                        ),
                    ),
                    span: Span,
                },
            ],
            span: Span,
            is_common: false,
            where_clause: None,
        },
    ),
]
